Solve homepage full height alignment

--- a/TEKDB/explore/static/explore/css/welcome.css
+++ b/TEKDB/explore/static/explore/css/welcome.css
@@ -4,9 +4,15 @@ main.content-wrapper div.container {
   margin: 0;
 }
 
-div.homepage-column {
-  height: calc(100vh - var(--header_height));
-  max-height: calc(100vh - var(--header_height));
+@media screen and (min-width: 992px) { 
+  div.homepage-column {
+    align-self: stretch;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    min-height: calc(100vh - var(--header_height));
+    /* max-height: calc(100vh - var(--header_height)); */
+  }
 }
 
 div#homepage-left-column {
